re PR target/36336 (ICE push_reload - psuedo reg_equiv_constant)

PR target/36336
* config/avr/avr.h (LEGITIMIZE_RELOAD_ADDRESS): Add check for reg_equiv_constant.

From-SVN: r136819